--- a/views/common/navigation.ejs
+++ b/views/common/navigation.ejs
@@ -7,14 +7,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand pull-left" href="/">DVNA</a>
+      <a class="navbar-brand logo" style="color: coral;" href="/">CTF <i class='fa fa-flag'></i></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
+      
       <ul class='nav navbar-nav navbar-right'>
           <% if(messages.authenticated){ %>
           <li>
               <a href='/logout'>
-                  <i class='fa fa-sign-out'></i> Logout
+                  Logout
               </a>
           </li>
           <% } %>
