--- a/views/learn.ejs
+++ b/views/learn.ejs
@@ -19,9 +19,10 @@
                 <% } else if (messages.info) {%> 
                     <div class="alert alert-info"><%= messages.info %></div>
                 <% } %>                
-                <h3>Welcome to <strong>Damn Vulnerable NodeJS Application</strong></h3>
-                <p>The <i>Damn Vulnerable NodeJS Application</i> implements a set of intentionally vulnerable functions in NodeJS for learning purpose.
+                <h3>Welcome to this <strong>Catch The Flag</strong></h3>
+                <p>The <i>Catch The Flag</i> implements a set of intentionally vulnerable functions in NodeJS for learning purpose.
                 Start by selecting one of the vulnerability class from the left menu or select one of the link below </p>
+                <br />
                 <h4>OWASP Top 10 2018</h4>
                 <ul>
                     
@@ -31,6 +32,7 @@
                         <% } %>
                     <% } %>
                 </ul>
+                <br />
                 <h4>OWASP Top 10 2017</h4>
                 <ul>
                     
@@ -40,7 +42,17 @@
                         <% } %>
                     <% } %>
                 </ul>
+                <br />
                 <h4>OWASP Top 10 2013</h4>
+                <ul>
+                    <% for (var vulnKey in vulnerabilities) { %>
+                        <% if (vulnKey[1]=='x') { %>
+                        <li><a href='/learn/vulnerability/<%=vulnKey%>'> <%=vulnerabilities[vulnKey]%> </a></li>
+                        <% } %>
+                    <% } %>
+                </ul>
+                <br />
+                <h4>RETOS CRIPTOGRÁFICOS</h4>
                 <ul>
                     <% for (var vulnKey in vulnerabilities) { %>
                         <% if (vulnKey[1]=='x') { %>
