--- a/views/register.ejs
+++ b/views/register.ejs
@@ -3,13 +3,12 @@
     <% include common/head %>
 </head>
 <body>
-    <% include common/navigation %>
     <div class='container' style='min-height: 450px'><div class='row'><div class='col-md-12'>
 
         <div class='row'>
             <div class='col-md-6 col-md-offset-3'>
-                <div class='page-header'>
-                    <h2>Register</h2>
+                <div class='page-header loginTitle'>
+                    <h2>REGISTER</h2>
                 </div>
 
                 <% if (messages.success) { %>
@@ -27,19 +26,19 @@
                         <fieldset>
 
                             <div class="form-group ">
-                                <label class="  control-label" for="register_name">Name </label>
+                                <label class="  control-label" for="register_name">Full Name </label>
                                 <div class="  controls">
 
-                                    <input type="text" name="name" value="" id="register_name" class="form-control" placeholder="Enter full name" />
+                                    <input type="text" name="name" value="" id="register_name" class="form-control" placeholder="" />
                                 </div>
                             </div>
 
 
                             <div class="form-group ">
-                                <label class="  control-label" for="register_login">Login </label>
+                                <label class="  control-label" for="register_login">Username </label>
                                 <div class="  controls">
 
-                                    <input type="text" name="username" value="" id="register_login" class="form-control" placeholder="Enter username" />
+                                    <input type="text" name="username" value="" id="register_login" class="form-control" placeholder="" />
                                 </div>
                             </div>
 
@@ -48,7 +47,7 @@
                                 <label class="  control-label" for="register_email">Email </label>
                                 <div class="  controls">
 
-                                    <input type="text" name="email" value="" id="register_email" class="form-control" placeholder="Enter email address" />
+                                    <input type="text" name="email" value="" id="register_email" class="form-control" placeholder="" />
                                 </div>
                             </div>
 
@@ -57,7 +56,7 @@
                                 <label class="  control-label" for="register_password">Password </label>
                                 <div class="  controls">
 
-                                    <input type="password" name="password" id="register_password" class="form-control" placeholder="Enter password" />
+                                    <input type="password" name="password" id="register_password" class="form-control" placeholder="" />
                                 </div>
                             </div>
 
@@ -65,12 +64,12 @@
                                 <label class="  control-label" for="register_passwordConfirmation">Password Confirmation </label>
                                 <div class="  controls">
 
-                                    <input type="password" name="cpassword" id="register_passwordConfirmation" class="form-control" placeholder="Confirm password" />
+                                    <input type="password" name="cpassword" id="register_passwordConfirmation" class="form-control" placeholder="" />
                                 </div>
                             </div>
 
 
-                            <input type="submit" value="Submit" id="register_0" class="btn btn-primary" />
+                            <input type="submit" value="Create account" id="register_0" class="btn btn-primary" />
 
                         </fieldset>
                     </form>
@@ -93,6 +92,6 @@
 
 
     </div></div></div>
-    <% include common/footer %>
+    
 </body>
 </html>
