--- a/views/resetpw.ejs
+++ b/views/resetpw.ejs
@@ -9,7 +9,7 @@
 
     <div class='row'>
         <div class='col-md-6 col-md-offset-3'>
-            <div class='page-header'>
+            <div class='page-header loginTitle'>
                 <h2>Reset Password</h2>
             </div>
 
@@ -59,6 +59,6 @@
 
 
 </div></div></div>
-<% include common/footer %>
+
 </body>
 </html>
