--- a/views/cryptography-vulnerabilities/layout.ejs
+++ b/views/cryptography-vulnerabilities/layout.ejs
@@ -4,11 +4,11 @@
     <% include ../common/head %>
 </head>
 <body>
-    <% include ../common/navigation %>
+    <% include ../common/header %>
 <div class='' style='min-height: 450px'><div class='row'><div class='col-md-12'>
 
     <div class='row'>
-        <% include ../common/sidebar %>
+        <% include sidebar %>
         <div class='col-md-9' style='padding: 40px'>
             <h3><%=vuln_title%></h3>
 
