--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -7,13 +7,23 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand logo" style="color: coral;" href="/">CTF <i class='fa fa-flag'></i></a>
+      <a class="navbar-brand logo" style="color: coral;" href="/"><i class='fa fa-flag'></i> Catch The Flags</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       
       <ul class='nav navbar-nav navbar-right'>
+          <li class="borderLeft">
+              <a href='/learn/hacking-web/vulnerability/a1_injection'>
+                  Hacking Web
+              </a>
+          </li>
+          <li class="borderLeft borderRight">
+              <a href='/learn/cryptography/vulnerability/ax_csrf'>
+                  Cryptography
+              </a>
+          </li>
           <% if(messages.authenticated){ %>
-          <li>
+          <li class="ml50">
               <a href='/logout'>
                   Logout
               </a>
