--- a/views/hacking-web-vulnerabilities/sidebar.ejs
+++ b/views/hacking-web-vulnerabilities/sidebar.ejs
@@ -4,7 +4,7 @@
             <div class="plr20">
                 <% for (var vulnKey in vulnerabilities) { %>
                     <% if (vulnKey[1]!='x') { %>
-                    <a href="/learn/vulnerability/<%=vulnKey%>" class='list-group-item'>
+                    <a href="/learn/hacking-web/vulnerability/<%=vulnKey%>" class='list-group-item'>
                         <p class="secondaryText"><%=vulnerabilities[vulnKey]%></p>
                     </a>
                     <% } %>
@@ -14,7 +14,7 @@
             <div class="plr20">
                 <% for (var vulnKey in vulnerabilities) { %>
                     <% if (vulnKey[1]!='x') { %>
-                    <a href="/learn/vulnerability/<%=vulnKey%>" class='list-group-item'>
+                    <a href="/learn/hacking-web/vulnerability/<%=vulnKey%>" class='list-group-item'>
                         <p class="secondaryText"><%=vulnerabilities[vulnKey]%></p>
                     </a>
                     <% } %>
@@ -25,17 +25,7 @@
                 
                 <% for (var vulnKey in vulnerabilities) { %>
                     <% if (vulnKey[1]=='x') { %>
-                    <a href="/learn/vulnerability/<%=vulnKey%>" class='list-group-item'>
-                        <p class="secondaryText"><%=vulnerabilities[vulnKey]%></p>
-                    </a>
-                    <% } %>
-                <% } %>
-            </div>
-            <h4 class="primaryText pt20">RETOS CRIPTOGRÁFICOS</h4>
-            <div class="plr20">
-                <% for (var vulnKey in vulnerabilities) { %>
-                    <% if (vulnKey[1]=='x') { %>
-                    <a href="/learn/vulnerability/<%=vulnKey%>" class='list-group-item'>
+                    <a href="/learn/hacking-web/vulnerability/<%=vulnKey%>" class='list-group-item'>
                         <p class="secondaryText"><%=vulnerabilities[vulnKey]%></p>
                     </a>
                     <% } %>
