--- a/views/hacking-web-vulnerabilities/sidebar.ejs
+++ b/views/hacking-web-vulnerabilities/sidebar.ejs
@@ -2,21 +2,36 @@
         <div class='list-group sidebar'>
             <h4 class="primaryText pt20">OWASP Top 10 2018</h4>
             <div class="plr20">
+                
                 <% for (var vulnKey in vulnerabilities) { %>
+                    <% currentPath = "/learn/hacking-web/vulnerability/"+vulnKey %>
                     <% if (vulnKey[1]!='x') { %>
-                    <a href="/learn/hacking-web/vulnerability/<%=vulnKey%>" class='list-group-item'>
-                        <p class="secondaryText"><%=vulnerabilities[vulnKey]%></p>
-                    </a>
+                        <% if(path === currentPath){ %>
+                            <a href="/learn/hacking-web/vulnerability/<%=vulnKey%>" style="background-color: #bdc1cc" class='list-group-item'>
+                                <p class="secondaryText"><%=vulnerabilities[vulnKey]%></p>
+                            </a>
+                        <% } else {%>  
+                            <a href="/learn/hacking-web/vulnerability/<%=vulnKey%>" class='list-group-item'>
+                                <p class="secondaryText"><%=vulnerabilities[vulnKey]%></p>
+                            </a>
+                        <% } %> 
                     <% } %>
                 <% } %>
             </div>
             <h4 class="primaryText pt20">OWASP Top 10 2017</h4>
             <div class="plr20">
                 <% for (var vulnKey in vulnerabilities) { %>
+                    <% currentPath = "/learn/hacking-web/vulnerability/"+vulnKey %>
                     <% if (vulnKey[1]!='x') { %>
-                    <a href="/learn/hacking-web/vulnerability/<%=vulnKey%>" class='list-group-item'>
-                        <p class="secondaryText"><%=vulnerabilities[vulnKey]%></p>
-                    </a>
+                        <% if(path === currentPath){ %>
+                            <a href="/learn/hacking-web/vulnerability/<%=vulnKey%>" style="background-color: #bdc1cc" class='list-group-item'>
+                                <p class="secondaryText"><%=vulnerabilities[vulnKey]%></p>
+                            </a>
+                        <% } else {%>  
+                            <a href="/learn/hacking-web/vulnerability/<%=vulnKey%>" class='list-group-item'>
+                                <p class="secondaryText"><%=vulnerabilities[vulnKey]%></p>
+                            </a>
+                        <% } %> 
                     <% } %>
                 <% } %>
             </div>
@@ -24,10 +39,17 @@
             <div class="plr20">
                 
                 <% for (var vulnKey in vulnerabilities) { %>
+                    <% currentPath = "/learn/hacking-web/vulnerability/"+vulnKey %>
                     <% if (vulnKey[1]=='x') { %>
-                    <a href="/learn/hacking-web/vulnerability/<%=vulnKey%>" class='list-group-item'>
-                        <p class="secondaryText"><%=vulnerabilities[vulnKey]%></p>
-                    </a>
+                        <% if(path === currentPath){ %>
+                            <a href="/learn/hacking-web/vulnerability/<%=vulnKey%>" style="background-color: #bdc1cc" class='list-group-item'>
+                                <p class="secondaryText"><%=vulnerabilities[vulnKey]%></p>
+                            </a>
+                        <% } else {%>  
+                            <a href="/learn/hacking-web/vulnerability/<%=vulnKey%>" class='list-group-item'>
+                                <p class="secondaryText"><%=vulnerabilities[vulnKey]%></p>
+                            </a>
+                        <% } %> 
                     <% } %>
                 <% } %>
             </div>
