--- a/views/learn.ejs
+++ b/views/learn.ejs
@@ -4,6 +4,7 @@
     <% include common/head %>
 </head>
 <body>
+    <% type= 'learn'; %>
     <% include common/header %>
     
     <div class='container' style='min-height: 450px'><div class='row'><div class='col-md-12'>
@@ -24,9 +25,9 @@
                 Start by selecting one of the vulnerability class from the left menu or select one of the link below </p>
                 <br />
                 <br />
+                <!-- <br />
                 <br />
-                <br />
-                <br />
+                <br /> -->
 
                 <div class='col-md-6'>
                     <a class="blog" href='/learn/hacking-web/vulnerability/<%=hackingWebMainVulnerability%>'>HACKING WEB</a>
