--- a/views/cryptography-vulnerabilities/layout.ejs
+++ b/views/cryptography-vulnerabilities/layout.ejs
@@ -3,7 +3,8 @@
 <head>
     <% include ../common/head %>
 </head>
-<body>
+<body> 
+    <% type= 'crypto'; %>
     <% include ../common/header %>
 <div class='' style='min-height: 450px'><div class='row'><div class='col-md-12'>
 
