--- a/views/hacking-web-vulnerabilities/layout.ejs
+++ b/views/hacking-web-vulnerabilities/layout.ejs
@@ -4,6 +4,7 @@
     <% include ../common/head %>
 </head>
 <body>
+    <% type= 'web'; %>
     <% include ../common/header %>
 <div class='' style='min-height: 450px'><div class='row'><div class='col-md-12'>
 
