--- a/views/learn.ejs
+++ b/views/learn.ejs
@@ -25,54 +25,13 @@
                 Start by selecting one of the vulnerability class from the left menu or select one of the link below </p>
                 <br />
                 <br />
-                <!-- <br />
-                <br />
-                <br /> -->
 
                 <div class='col-md-6'>
-                    <a class="blog" href='/learn/hacking-web/vulnerability/<%=hackingWebMainVulnerability%>'>HACKING WEB</a>
+                    <a class="blog" href='/learn/hacking-web/vulnerability/info'>HACKING WEB</a>
                 </div>
                 <div class='col-md-6'>
-                    <a class="blog" href='/learn/cryptography/vulnerability/<%=cryptographyMainVulnerability%>'>CRYPTOGRAPHY</a>
+                    <a class="blog" href='/learn/cryptography/vulnerability/info'>CRYPTOGRAPHY</a>
                 </div>
-
-                <!-- <h4>OWASP Top 10 2018</h4>
-                <ul>
-                    
-                    <% for (var vulnKey in vulnerabilities) { %>
-                        <% if (vulnKey[1]!='x') { %>
-                        <li><a href='/learn/hacking-web/vulnerability/<%=vulnKey%>'> <%=vulnerabilities[vulnKey]%> </a></li>
-                        <% } %>
-                    <% } %>
-                </ul>
-                <br />
-                <h4>OWASP Top 10 2017</h4>
-                <ul>
-                    
-                    <% for (var vulnKey in vulnerabilities) { %>
-                        <% if (vulnKey[1]!='x') { %>
-                        <li><a href='/learn/hacking-web/vulnerability/<%=vulnKey%>'> <%=vulnerabilities[vulnKey]%> </a></li>
-                        <% } %>
-                    <% } %>
-                </ul>
-                <br />
-                <h4>OWASP Top 10 2013</h4>
-                <ul>
-                    <% for (var vulnKey in vulnerabilities) { %>
-                        <% if (vulnKey[1]=='x') { %>
-                        <li><a href='/learn/hacking-web/vulnerability/<%=vulnKey%>'> <%=vulnerabilities[vulnKey]%> </a></li>
-                        <% } %>
-                    <% } %>
-                </ul>
-                <br />
-                <h4>RETOS CRIPTOGRÁFICOS</h4>
-                <ul>
-                    <% for (var vulnKey in vulnerabilities) { %>
-                        <% if (vulnKey[1]=='x') { %>
-                        <li><a href='/learn/cryptography/vulnerability/<%=vulnKey%>'> <%=vulnerabilities[vulnKey]%> </a></li>
-                        <% } %>
-                    <% } %>
-                </ul> -->
             </div>
         </div>
 
