first challenge crypto

--- a/views/hacking-web-vulnerabilities/layers.ejs
+++ b/views/hacking-web-vulnerabilities/layers.ejs
@@ -1,4 +1,4 @@
-<h4 class="primaryText pt20">LAYERS</h4>
+<h4 class="primaryText pt20">NETWORKING</h4>
     <div class="plr20">
         <% for (var vulnKey in vulnerabilities) { %>
             <% currentPath = "/learn/hacking-web/vulnerability/"+vulnKey %>
@@ -15,7 +15,7 @@
             <% } %>
         <% } %>
     </div>
-    <h4 class="primaryText pt20">OWASP Top 10 2017</h4>
+    <h4 class="primaryText pt20">SUPPORT</h4>
     <div class="plr20">
         <% for (var vulnKey in vulnerabilities) { %>
             <% currentPath = "/learn/hacking-web/vulnerability/"+vulnKey %>
@@ -32,7 +32,7 @@
             <% } %>
         <% } %>
     </div>
-    <h4 class="primaryText pt20">OWASP Top 10 2013</h4>
+    <h4 class="primaryText pt20">CONTENTS</h4>
     <div class="plr20">
         
         <% for (var vulnKey in vulnerabilities) { %>
