adds main page to the hacking and to the crypto

--- a/views/cryptography-vulnerabilities/layout.ejs
+++ b/views/cryptography-vulnerabilities/layout.ejs
@@ -10,13 +10,16 @@
     <div class='row'>
         <% include sidebar %>
         <div class='col-md-9' style='padding: 40px'>
-            <h3><%=vuln_title%></h3>
-            <br />
-            <%- include(vuln_description) %>
-
-            <br />
-            <h4>Reference</h4>
-            <%- include(vuln_reference) %>
+            <%if (vuln_title) {%>
+                <h3><%=vuln_title%></h3>
+                <br />
+                <%- include(vuln_description) %>
+                <br />
+                <h4>Reference</h4>
+                <%- include(vuln_reference) %>
+            <% } else {%>
+                <%- include info/description %>
+            <% }%>
         </div>
     </div>
 
