--- a/views/hacking-web-vulnerabilities/sidebar.ejs
+++ b/views/hacking-web-vulnerabilities/sidebar.ejs
@@ -17,9 +17,9 @@
         
         <br><br><br>
         <% if (mode === 1) { %>
-            <% include layers %>
+            <% include sidebars/layers %>
         <% } else if(mode === 2){%> 
-            <% include owasp %>
+            <% include sidebars/owasp %>
         <% } %>
     </div>
 </div>
