--- a/views/learn.ejs
+++ b/views/learn.ejs
@@ -22,7 +22,7 @@
                 <% } %>                
                 <h3>Welcome to <strong>Catch The Flags</strong></h3>
                 <p><i>Catch The Flags</i> implements a set of intentionally vulnerable functions in NodeJS for learning purpose.
-                Start by selecting one of the vulnerability class from the left menu or select one of the link below </p>
+                Start by selecting which of the following subjects you want to practise:</p>
                 <br />
                 <br />
 
