--- a/views/common/head.ejs
+++ b/views/common/head.ejs
@@ -3,16 +3,12 @@
 <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
+<link rel="icon" type="image/vnd.microsoft.icon" href="/assets/img/favicon.ico">
 
-<script src='/assets/jquery-3.2.1.min.js'></script>
+<script src='/assets/js/jquery-3.2.1.min.js'></script>
+<script type="text/javascript" src="/assets/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/assets/js/bootstrapValidator.js"></script>
 
-
-<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/jquery.bootstrapvalidator/0.5.3/js/bootstrapValidator.js"></script>
-<link id="bootstrap_styles" rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css"/>
-
-
-<link rel="stylesheet" href="/assets/fa/css/font-awesome.min.css">
-<link rel="stylesheet" href="/assets/styles.css">
+<link id="bootstrap_styles" rel="stylesheet" href="/assets/css/bootstrap.min.css" type="text/css"/>
+<link rel="stylesheet" href="/assets/vendors/fa/css/font-awesome.min.css">
+<link rel="stylesheet" href="/assets/css/styles.css">
