--- a/views/hacking-web-vulnerabilities/layout.ejs
+++ b/views/hacking-web-vulnerabilities/layout.ejs
@@ -5,7 +5,7 @@
 </head>
 <body>
     <% include ../common/header %>
-<div class='' style='min-height: 450px'><div class='row'><div class='col-md-12'>
+<div class='container' style='min-height: 450px; margin-left: 0px; padding-left: 0px;'><div class='row'><div class='col-md-12'>
 
     <div class='row'>
         <% include sidebar %>
