--- a/views/common/header.ejs
+++ b/views/common/header.ejs
@@ -1,5 +1,5 @@
 <nav class="primaryColor navbar navbar-inverse navbar-fixed-top" style="border:0px">
-  <div class="container">
+  <div class="container" style="margin-left: 0px;padding-left: 40px;">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
         <span class="sr-only">Toggle navigation</span>
